force-app/main/default/objects/DynamoDBOrder__x/DynamoDBOrder__x.object-meta.xml
<CustomObject>
    <externalDataSource>ebikesaws__dynamodbds</externalDataSource>
    <externalName>Orders</externalName>
    <label>DynamoDB Order</label>
    <pluralLabel>DynamoDB Orders</pluralLabel>
</CustomObject>