force-app/main/default/objects/DynamoDBOrder__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>50</length>
    <referenceTargetField
    >Account.ebikesaws__ExtAccountId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MBOrders</relationshipLabel>
    <relationshipName>MBOrders</relationshipName>
    <type>IndirectLookup</type>
</CustomField>