force-app/main/default/objects/DynamoDBOrder__x/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <externalDeveloperName>Amount</externalDeveloperName>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>