force-app/main/default/objects/DynamoDBOrder__x/fields/DynamoDB_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>DynamoDB_Order_Status__c</fullName>
    <externalDeveloperName>OrderStatus</externalDeveloperName>
    <label>DynamoDB Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>