force-app/main/default/objects/DynamoDBOrder__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <externalDeveloperName>Id</externalDeveloperName>
    <label>Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>