force-app/main/default/objects/DynamoDBOrder__x/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <externalDeveloperName>Model</externalDeveloperName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLYING-BIKE-S3</fullName>
            </value>
            <value>
                <fullName>WATER-BIKE-A4</fullName>
            </value>
            <value>
                <fullName>SPACE-BIKE-S1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>