force-app/main/default/objects/DynamoDBOrder__x/fields/OrderDateTime__c.field-meta.xml
<CustomField>
    <fullName>OrderDateTime__c</fullName>
    <externalDeveloperName>OrderDateTime</externalDeveloperName>
    <label>OrderDateTime</label>
    <type>DateTime</type>
</CustomField>