force-app/main/default/objects/DynamoDBOrder__x/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <externalDeveloperName>Quantity</externalDeveloperName>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>