force-app/main/default/objects/DynamoDBOrder__x/fields/StatusX__c.field-meta.xml
<CustomField>
    <fullName>StatusX__c</fullName>
    <externalDeveloperName>StatusX</externalDeveloperName>
    <label>StatusX</label>
    <length>20</length>
    <type>Text</type>
</CustomField>