force-app/main/default/objects/DynamoDBOrder__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Model__c</columns>
    <columns>OrderDateTime__c</columns>
    <columns>Quantity__c</columns>
    <columns>DynamoDB_Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>